# 7407-DriveCode-ChargedUp

./: .gitignore  .installer_config  .pre-commit-config.yaml  README.md  config.py  constants.py  leds.py  pyproject.toml  requirements.txt  robot.py  robot_systems.py  simgui-ds.json  simgui-window.json  simgui.json
autonomous/: __init__.py  auto_routine.py  basic_auto.py  combine_trajectory_json.py  custom_pathing.py  generate_routine.py  trajectory.py
autonomous/routines/: __init__.py
autonomous/routines/BALANCE_AUTO/: balance_auto.py
autonomous/routines/GYRO_BALANCE/: gyro_balance.py
autonomous/routines/PICK_BALANCE/: blue.py  red.py  red_base_coords.py
autonomous/routines/THREE_PIECE_NO_GUARD/: __init__.py  base_coords.py  blue.py  blue_base_coords.py  red.py  red_base_coords.py
autonomous/routines/THREE_PIECE_WITH_GUARD/: base_coords.py  blue.py  blue_base_coords.py  red.py  red_base_coords.py
autonomous/routines/auto2/: auto2.py
autonomous/utils/: custom_pathing.py  path_planner.py  trajectory.py
command/: __init__.py  arm.py  claw.py  climber.py  drivetrain.py  elevator.py  grabber.py  intake.py  targeting.py
command/autonomous/: __init__.py  custom_pathing.py  trajectory.py
oi/: OI.py  keymap.py
scratches/: test_weighted_pose_average.py
sensors/: IR_Sensor.py  __init__.py  field_odometry.py  ir_sensor.py  ir_sensors.py  leds.py  pv_cameras.py
subsystem/: __init__.py  arm.py  claw.py  climber.py  drivetrain.py  drivetrain_new.py  elevator.py  grabber.py  intake.py  landing_gear.py
tests/odometry/: limelight_odometry_test.py
units/: SI.py  __init__.py
utils/: __init__.py  boundary_box.py  boundry_box.py  can_optimizations.py  data_log.py
(+107 files in other folders)
