[tool.poetry]
name = "7407-DRIVECODE-ChargedUp"
version = "0.1.0"
description = "Team 7407 Wired Boars ChargedUp Robot Code"
authors = ["Sidharth Rao <sidharthmrao@gmail.com>"]

[tool.poetry.dependencies]
python=">=3.7,<3.12"
robotpy = {version = "2023.0.0b7", extras = ["commands2"]}
robotpy-photonvision = "2023.1.1b7"
wpilib = "2023.1.1.0"
pre-commit = "^2.20.0"
black = "^22.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
logger = "^1.4"
robotpy-toolkit-7407 = "0.5.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
