[tool.poetry]
name = "7407-DRIVECODE-ChargedUp"
version = "0.1.0"
description = "Team 7407 Wired Boars ChargedUp Robot Code"
authors = ["Sidharth Rao <sidharthmrao@gmail.com>"]

[tool.poetry.dependencies]
python=">3.9,<3.12"
robotpy-toolkit-7407 = "^0.5.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
