[tool.poetry]
name = "7407-DRIVECODE-ChargedUp"
version = "0.1.0"
description = "Team 7407 Wired Boars ChargedUp Robot Code"
authors = ["Sidharth Rao <sidharthmrao@gmail.com>"]

[tool.poetry.dependencies]
python=">3.9,<3.12"
robotpy-toolkit-7407 = "^0.5.49.13"
pre-commit = "^3.0.0"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "subsystem", "command", "sensors", "oi", "robotpy-toolkit-7407"]